# esp-claw

./: .gitignore  CHANGELOG.md
.gitlab/ci/: check_copyright_config.yaml
application/edge_agent/: .gitignore  CMakeLists.txt
application/edge_agent/components/http_server/: http_server_core.c  http_server_files_api.c  http_server_priv.h  http_server_webim_api.c
application/edge_agent/main/: idf_component.yml  main.c
components/claw_capabilities/cap_boards/: CMakeLists.txt
components/claw_capabilities/cap_boards/tools/: generate_board_skill.py
components/claw_capabilities/cap_cli/src/: cap_cli.c
components/claw_capabilities/cap_files/src/: cap_files.c
components/claw_capabilities/cap_im_attachment/: CMakeLists.txt
components/claw_capabilities/cap_im_attachment/src/: cap_im_attachment.c
components/claw_capabilities/cap_im_feishu/: CMakeLists.txt
components/claw_capabilities/cap_im_feishu/skills/cap_im_feishu/: SKILL.md
components/claw_capabilities/cap_im_feishu/src/: cap_im_feishu.c
components/claw_capabilities/cap_im_qq/: CMakeLists.txt
components/claw_capabilities/cap_im_qq/skills/cap_im_qq/: SKILL.md
components/claw_capabilities/cap_im_qq/src/: cap_im_qq.c
components/claw_capabilities/cap_im_tg/: CMakeLists.txt
components/claw_capabilities/cap_im_tg/skills/cap_im_tg/: SKILL.md
components/claw_capabilities/cap_im_wechat/: CMakeLists.txt
components/claw_capabilities/cap_im_wechat/skills/cap_im_wechat/: SKILL.md
components/claw_capabilities/cap_lua/include/: cap_lua.h
components/claw_capabilities/cap_lua/src/: cap_lua.c  cap_lua_internal.h  cap_lua_runtime.c
components/claw_capabilities/cap_mcp_client/: CMakeLists.txt
components/claw_capabilities/cap_session_mgr/src/: cap_session_mgr.c
components/claw_capabilities/cap_skill_mgr/src/: cap_skill_mgr.c  cmd_cap_skill.c
components/claw_capabilities/cap_time/src/: cap_time.c
components/claw_capabilities/cap_web_search/: CMakeLists.txt
components/claw_modules/claw_cap/src/: claw_cap.c
components/claw_modules/claw_core/: CMakeLists.txt
components/claw_modules/claw_core/include/: claw_core.h
components/claw_modules/claw_core/src/: claw_core.c  claw_core_llm.c
components/claw_modules/claw_core/src/llm/backends/: claw_llm_backend_anthropic.c
components/claw_modules/claw_core/src/llm/media/: claw_media_pipeline.c
components/claw_modules/claw_event_router/include/: claw_event_router.h
components/claw_modules/claw_memory/: CMakeLists.txt
components/claw_modules/claw_memory/include/: claw_memory.h
components/claw_modules/claw_memory/skills/memory_ops/: SKILL.md
components/claw_modules/claw_memory/skills/profile_memory_ops/: SKILL.md
components/claw_modules/claw_memory/src/: claw_memory.c  claw_memory_internal.h  claw_memory_session.c  claw_memory_storage.c  claw_memory_utils.c
components/common/app_claw/: Kconfig  app_capabilities.c  app_claw.c  app_lua_modules.c  idf_component.yml
components/common/emote/: emote.c
components/common/http_reuse/: CMakeLists.txt  Kconfig.projbuild  esp_http_client_reuse.c
components/common/lua_module_builder/: .gitignore  CMakeLists.txt  lua-module-spec.md  project_include.cmake
components/common/skill_builder/: claw-skill-spec.md  project_include.cmake
components/lua_modules/lua_module_adc/: CMakeLists.txt  README.md
components/lua_modules/lua_module_audio/: CMakeLists.txt  README.md
components/lua_modules/lua_module_board_manager/: CMakeLists.txt  README.md
components/lua_modules/lua_module_button/: README.md
components/lua_modules/lua_module_call_capability/: CMakeLists.txt  README.md
components/lua_modules/lua_module_camera/: CMakeLists.txt  README.md
components/lua_modules/lua_module_delay/: CMakeLists.txt  README.md
components/lua_modules/lua_module_display/: CMakeLists.txt  README.md
components/lua_modules/lua_module_environmental_sensor/: CMakeLists.txt  Kconfig  README.md  idf_component.yml
components/lua_modules/lua_module_environmental_sensor/src/: lua_module_environmental_sensor.c  lua_module_environmental_sensor.h
components/lua_modules/lua_module_environmental_sensor/test/: environmental_read.lua
components/lua_modules/lua_module_esp_heap/: CMakeLists.txt  README.md
components/lua_modules/lua_module_event_publisher/: CMakeLists.txt  README.md
components/lua_modules/lua_module_fuel_gauge/: README.md
components/lua_modules/lua_module_gpio/: CMakeLists.txt  README.md
components/lua_modules/lua_module_i2c/: CMakeLists.txt  README.md
components/lua_modules/lua_module_imu/: CMakeLists.txt  Kconfig  README.md
components/lua_modules/lua_module_imu/src/: lua_module_imu.c  lua_module_imu.h
components/lua_modules/lua_module_imu/src/mpu6050/: mpu6050.c  mpu6050.h  mpu6050_defs.h
components/lua_modules/lua_module_imu/test/: imu_read.lua
components/lua_modules/lua_module_ir/: CMakeLists.txt  README.md
components/lua_modules/lua_module_knob/: CMakeLists.txt  README.md
components/lua_modules/lua_module_lcd/: CMakeLists.txt  README.md
components/lua_modules/lua_module_lcd/src/: lua_module_lcd.h
components/lua_modules/lua_module_lcd/test/: lcd_text.lua
components/lua_modules/lua_module_lcd_touch/: CMakeLists.txt  README.md
components/lua_modules/lua_module_led_strip/: CMakeLists.txt  README.md
components/lua_modules/lua_module_magnetometer/: CMakeLists.txt  README.md
components/lua_modules/lua_module_magnetometer/src/: lua_module_magnetometer.c  lua_module_magnetometer.h
components/lua_modules/lua_module_magnetometer/src/bmm350/: bmm350.c  bmm350.h  bmm350_defs.h
components/lua_modules/lua_module_magnetometer/test/: magnetometer_read.lua
components/lua_modules/lua_module_mcpwm/: CMakeLists.txt  README.md
components/lua_modules/lua_module_ssd1306/: README.md
components/lua_modules/lua_module_storage/: CMakeLists.txt  README.md
components/lua_modules/lua_module_system/: CMakeLists.txt  README.md
components/lua_modules/lua_module_touch/: CMakeLists.txt  README.md
components/lua_modules/lua_module_uart/: CMakeLists.txt  README.md
(+91 files in other folders)
