idf_component_register(
    SRCS
        "src/claw_core.c"
        "src/claw_task.c"
        "src/claw_core_llm.c"
        "src/llm/claw_llm_runtime.c"
        "src/llm/claw_llm_http_transport.c"
        "src/llm/backends/claw_llm_backend_anthropic.c"
        "src/llm/backends/claw_llm_backend_openai_compatible.c"
        "src/llm/backends/claw_llm_backend_custom.c"
        "src/llm/media/claw_media_pipeline.c"
    INCLUDE_DIRS
        "include"
        "src"
    REQUIRES
        esp_http_client
        http_reuse
        esp-tls
        freertos
        json
        mbedtls
    PRIV_REQUIRES
        claw_event_router
)
